--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 	<title>BoxPets</title>
 
 
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
 		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -27,15 +26,16 @@
 <body>
 
 	<header>
+		<!--BARRA DE MENU-->
 		<nav>
 			<a class="logo" href="index.html"><img src="/src/logo-box-pet.png" alt="" srcset=""></a>
-			<div class="mobile-menu" data-bs-toggle="offcanvas" href="#menu" role="button"
+			<section class="mobile-menu" data-bs-toggle="offcanvas" href="#menu" role="button"
 				aria-controls="offcanvasExample">
-				<div class="line1"></div>
-				<div class="line2"></div>
-				<div class="line3"></div>
+				<section class="line1"></section>
+				<section class="line2"></section>
+				<section class="line3"></section>
 
-			</div>
+			</section>
 			<ul class="nav-list">
 				<li><a href="#">Inicio</a></li>
 				<li><a href="#">Ongs</a></li>
@@ -43,16 +43,17 @@
 				<li><a href="login.html">Login</a></li>
 			</ul>
 		</nav>
+		<!--FIM DA BARRA DE MENU-->
 	</header>
-	<main>
 
-
+	<main><!--CORPO-->
+		<!--VIDEO APREST-->
 		<section class=" home">
-			<div class="video-main">
+			<section class="video-main">
 				<video class="video" src="src/video.mp4" autoplay muted loop></video>
-			</div>
+			</section>
 
-			<div class="content">
+			<section class="content">
 				<h1>BoxPets.<br><span>Tudo pra você</span></h1>
 				<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
 					et
@@ -61,238 +62,159 @@
 					ex ea commodo consequat.</p>
 				<button href="LOGIN/login.html">Login</button>
 
-			</div>
-			<div class="media-icons">
+			</section>
+			<section class="media-icons">
 				<a href="#"><i class="fa-brands fa-instagram"></i></a>
 				<a href="#"><i class="fa-brands fa-facebook"></i></a>
 				<a href="#"><i class="fab fa-twitter"></i></a>
-			</div>
+			</section>
 
 		</section>
+		<!-- FIM DO VIDEO APREST-->
+	
+<!--OS card de serviço-->
 
 		<section>
-			<div class="container-fluid">
-				<div class="card">
-					<a href="servico.html" style="text-decoration: none;">
-						<div class="content">
-							<div class="imgBx">
+			<section class="container-fluid">
+				<section class="card">
+					<a href="servico.html" style="text-decoration: none;"> <!--CSS aqui por não está sendo reconhecido no style-->
+						<section class="content">
+							<section class="imgBx">
 								<img src="src/BANHOTOSA.png">
-							</div>
-							<div class="contentBx">
+							</section>
+							<section class="contentBx">
 								<h3>Banho&tosa<br><span>Os melhores serviços</span></h3>
-							</div>
-						</div>
+							</section>
+						</section>
 					</a>
-				</div>
-				<div class="card">
-					<a href="servico.html" style="text-decoration: none;">
-						<div class="content">
-							<div class="imgBx">
+				</section>
+
+				<section class="card">
+					<a href="servico.html" style="text-decoration: none;"> <!--CSS aqui por não está sendo reconhecido no style-->
+						<section class="content">
+							<section class="imgBx">
 								<img src="src/VETERINARIO.png">
-							</div>
-							<div class="contentBx">
+							</section>
+							<section class="contentBx">
 								<h3>Veterinario<br><span>Seviços</span></h3>
-							</div>
-						</div>
+							</section>
+						</section>
 					</a>
-				</div>
-				<div class="card">
-					<a href="servico.html" style="text-decoration: none;">
-						<div class="content">
-							<div class="imgBx">
+				</section> 
+
+				<section class="card">
+					<a href="servico.html" style="text-decoration: none;"> <!--CSS aqui por não está sendo reconhecido no style-->
+						<section class="content">
+							<section class="imgBx">
 								<img src="src/CRECHE.png">
-							</div>
-							<div class="contentBx">
+							</section>
+							<section class="contentBx">
 								<h3>Creche<br><span>Seviços</span></h3>
-							</div>
-						</div>
+							</section>
+						</section>
 					</a>
-				</div>
+				</section>
 
-				<div class="card">
-					<a href="servico.html" style="text-decoration: none;">
-						<div class="content">
-							<div class="imgBx">
+				<section class="card">
+					<a href="servico.html" style="text-decoration: none;"><!--CSS aqui por não está sendo reconhecido no style-->
+						<section class="content">
+							<section class="imgBx">
 								<img src="src/PASSEIO (2).png">
-							</div>
-							<div class="contentBx">
+							</section>
+							<section class="contentBx">
 								<h3>Passeio<br><span>Seviços</span></h3>
-							</div>
-						</div>
+							</section>
+						</section>
 					</a>
-				</div>
+				</section>
 
-				<div class="card">
-					<a href="servico.html" style="text-decoration: none;">
-						<div class="content">
-							<div class="imgBx">
+				<section class="card">
+					<a href="servico.html" style="text-decoration: none;"><!--CSS aqui por não está sendo reconhecido no style-->
+						<section class="content">
+							<section class="imgBx">
 								<img src="src/ADESTRAMENTO.png">
-							</div>
-							<div class="contentBx">
+							</section>
+							<section class="contentBx">
 								<h3>Adestramento<br><span>Seviços</span></h3>
-							</div>
-						</div>
+							</section>
+						</section>
 					</a>
-				</div>
-			</div>
+				</section>
+			</section>
+		</section>
+		<!--FIM DOS card de serviço-->
+
+		<section>
+			<section id="card-area">
+				<section class="wrapper">
+					<section class="box-area">
+						<section class="box">
+							<img src="src/carterinha.jpeg" alt="">
+							<section class="overlay">
+								<h3>Carterinha Pet</h3>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius magnam perferendis 
+									molestias eveniet tempora amet! </p>
+									<a href="#">Saiba Mais</a>
+							</section>
+						</section>
+
+						<section class="box">
+							<img src="src/agenda.jpeg" alt="">
+							<section class="overlay">
+								<h3>aGENDA vIRTUAL</h3>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius magnam perferendis 
+									molestias eveniet tempora amet! </p>
+									<a href="#">Saiba Mais</a>
+							</section>
+						</section>
+
+					</section>
+				</section>
+			</section>
 		</section>
 
-		<!--card-->
-		<div class="container py-4">
-			<div class="row">
+	
+<!--EMPRESAS-->
+<section class="quality section " id="empresas">
+	<section class="quality_container container">
+		<h2 class="section_title">
+			Veja sua empresa decolar na BoxPet
+		</h2>
 
-				<div class="row mt-4">
-					<div class="text-center col-md-6 py-5 bg-light text-dark">
-						<div class="lc-block">
-							<div editable="rich">
+<section class="quality_content grid">
+	<section class="quality_images">
+		<img src="src/bigempresa.jpg" alt="dog trabalhando" class="quality_img-big">
+		<img src="src/smallempreswa.jpg" alt="dog trabalhando" class="quality_img-small">
+	</section>
+	<section class="quality_data">
+		<h1 class="quality_title">Premium Coffee</h1>
+		<p class="quality_text">
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+			In mollitia nihil modi inventore corrupti
+			
 
-								<h2><strong>Carterinha Pet</strong></h2>
+		<section class="quality_buttons">
+			<button class="button">
+				SAiba MAIS
+			</button>
 
-
-							</div>
-						</div>
-						<div class="lc-block">
-							<div editable="rich">
-
-								<img src="https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/77/6f/b9/776fb98c-06b5-07b5-76a4-b12a71aa24c7/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1200x600wa.png"
-									style="width: 40%;" alt="">
-							</div>
-						</div>
-						<div class="lc-block px-4 mb-4">
-							<div editable="rich">
-
-								<p>&nbsp;Facil para você e para nós, coloque as informações dos seus pets na carterinha
-									para qe possemos dar o melhor serviço para você </p>
-							</div>
-						</div>
-						<div class="lc-block">
-							<a class="btn btn-outline-primary" href="#" role="button">Estilezar</a>
-						</div><!-- /lc-block -->
-					</div><!-- /col -->
-					<div class="text-center col-md-6 py-5 shadow-lg">
-						<div class="lc-block">
-							<div editable="rich">
-
-								<h2><strong>Agenda Virtual</strong></h2>
+			<a href="#" class="quality_button">
+				ver mais
+				<i class='bx bx-right-arrow-al'></i>
+			</a>
+		</section>
+	</section>
+</section>
+    </section>
+</section>
 
 
-							</div>
-						</div>
-						<div class="lc-block">
-							<div editable="rich">
+<!--FIM DAS EMPRESAS-->
 
-								<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoTIdO4x59X9xRKzcVHSNb0sHycCcgRcx-uvaBNntC4w&s"
-									style="width: 18%;" alt="">
-								<p>month</p>
-							</div>
-						</div>
-						<div class="lc-block px-4 mb-4">
-							<div editable="rich">
-
-								<p>&nbsp;Agende seus serviços de um jeito facil e pratico, seja lembrado dos seus
-									serviços e relembrado quando precisar.</p>
-							</div>
-						</div>
-						<div class="lc-block">
-							<a class="btn btn-outline-primary" href="#" role="button">Agendar</a>
-						</div><!-- /lc-block -->
-					</div><!-- /col -->
-				</div>
-			</div>
+		
 
 
-
-
-			<!-- about -->
-
-			<div class="p-5 text-center bg-body-tertiary rounded-3" style="margin-top: 4rem;">
-				<!--nao reconhece o style-->
-
-				<img src="https://img.freepik.com/free-photo/cute-pet-collage-isolated_23-2150007407.jpg?w=740&t=st=1698763025~exp=1698763625~hmac=e9cee1b5bc8f63f88b3c7ccdab95894b0676b55630cd0cc308982e30d6749b5f"
-					style="width: 20%;" alt="">
-				<h1 class="text-body-emphasis">Adota Pets</h1>
-				<!--Titulo-->
-				<p class="col-lg-8 mx-auto fs-5 text-muted">
-
-					" This is a custom jumbotron featuring an SVG image at the top, some longer text that wraps early
-					thanks to a responsive
-					class, and a customized call to action."
-					<!--texto-->
-
-				</p>
-				<!--btn1-->
-				<div class="d-inline-flex gap-2 mb-5">
-					<button class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill"
-						type="button">
-						Saiba Mais
-						<svg class="bi ms-2" width="24" height="24">
-							<use xlink:href="#arrow-right-short"></use>
-						</svg>
-					</button>
-					<!--fim btn1-->
-					<button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button">Sou Ongs
-					</button>
-				</div>
-			</div>
-
-		</div>
-
-
-
-
-
-		<!--<section class="about" id="about">
-
-		<div class="about_main">
-			<div class="about_content">
-				<div class="image">
-					<img src="src/gatinhos.jpg">
-
-					<div class="about_text">
-						<h1><span>Adota</span>Pet</h1>
-						<h3>com todo o amor para vcocê</h3>
-						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-							Lorem Ipsum has been the
-							industry's standard dummy text ever since the 1500s, when an unknown printer took
-							a galley of type and scrambled it to make a type specimen book.
-						</p>
-						<a href="#" class="about_btn btn text-light">Veja</a>
-					</div>
-				</div>
-
-	</section>-->
-
-		<!--empresas-->
-		<div class="container col-xxl-8 px-4 py-5">
-			<div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-				<div class="col-10 col-sm-8 col-lg-6">
-					<img src="https://1.bp.blogspot.com/-2sNk2LX_FK0/X9DgFzMY08I/AAAAAAABtdM/G7drgWuUwYUPK_xDKC77QPsyDJu8KWI-wCLcBGAsYHQ/s834/2iJmYyAjY6InYu02bj5CbvJGQvdmch1WYj91bpF2Y6MDO3QzN2QjNxIjOnVGcq5SOzETNzADOwcjRyUCOwcjRyUyMyEjMGJTJzUjMzEzXtUTMt8VbvNmLyBXbtkmRyUiRyUSQzUycwRHdopTM.jpg8"
-						class="d-block mx-lg-auto img-fluid" alt="" loading="lazy">
-				</div>
-				<div class="col-lg-6">
-					<div class="lc-block mb-3">
-						<div editable="rich">
-							<h2 class="fw-bold display-5">Sua Empresa na BoxPet.</h2>
-						</div>
-					</div>
-
-					<div class="lc-block mb-3">
-						<div editable="rich">
-							<p class="lead">Coloque sua empresa na Boxpet, apresente seus serviços para o seu publico
-								alvo e vista no seu negocio. Um ambiente só para seu investimento.
-							</p>
-						</div>
-					</div>
-
-					<div class="lc-block d-grid gap-2 d-md-flex justify-content-md-start"><a
-							class="btn btn-primary px-4 me-md-2" href="#" role="button">Saiba mais</a>
-						<a class="btn btn-outline-secondary px-4" href="#" role="button">Cadastre como Empresa</a>
-					</div>
-
-				</div>
-			</div>
-		</div>
+		<
 
 
 
@@ -300,12 +222,12 @@
 	</main>
 	<footer>
 
-		<div id="footer_content">
-			<div id="footer_contacts">
+		<section id="footer_content">
+			<section id="footer_contacts">
 				<h1>logo</h1>
 				<p>Tudo aqui</p>
 
-				<div id="footer_midia">
+				<section id="footer_midia">
 					<a href="#" class="footer-link" id="instagram">
 						<i class="fa-brands fa-instagram"></i>
 					</a>
@@ -315,8 +237,8 @@
 					<a href="#" class="footer-link" id="twitter">
 						<i class="fa-brands fa-twitter"></i>
 					</a>
-				</div>
-			</div>
+				</section>
+			</section>
 			<ul class="footer-list">
 				<li>
 					<h3>Blog</h3>
@@ -349,20 +271,20 @@
 				</li>
 			</ul>
 
-			<div id="footer_cadastro">
+			<section id="footer_cadastro">
 				<h3>Cadastre-se</h3>
 				<p>
 					dhgfjsdhghfeudj wesagyfgayw swgdfyuwag ryfgyewgf egfd
 					eyfg yewfgyewgf efydgyegf ef
 				</p>
 
-				<div id="input_group">
+				<section id="input_group">
 					<input type="email" id="email">
 					<button>
 						<i class="fa-regular fa-envelope"></i>
 					</button>
-				</div>
-			</div>
+				</section>
+			</section>
 
 			<p>&#169
 				2023 all rights reserve</p>
