--- a/landingPage.html
+++ b/landingPage.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
     <!--CSS-->
     <link rel="stylesheet" href="css/landingPage.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/footer-landingPage.css">
 
 </head>
 <body>
@@ -22,7 +22,7 @@
         <a href="#about">Sobre nós</a>
         <a href="#Shop">Shop</a>
         <a href="#serrvices">Serviços</a>
-        <a href="#plan">Planos</a>
+        <a href="#planos">Planos</a>
         <a href="#contact">Contatos</a>
     </nav>
 
@@ -105,6 +105,58 @@
             <a href="#" class="btn"> Saiba Mais</a>
     </div>
 </section>
+
+<!--Planos-->
+
+<div class="planos" id="planos">
+    <div class="planos-base">
+        <h1>Medio</h1>
+        <div class="preco">
+            <h2>R$50</h2>
+        </div>
+        <div class="vantagens">
+            <h4>lorem ipsum dolor</h4>
+            <h4>lorem ipsum dolor</h4>
+            <h4>lorem ipsum dolor</h4>
+            <h4>lorem ipsum dolor</h4>
+        </div>
+        <a href="#">Comprar</a>
+    </div>
+
+
+    <div class="planos-base">
+        <h1>Avançado</h1>
+        <div class="preco">
+            <h2>R$62</h2>
+        </div>
+        <div class="vantagens">
+            <h4>lorem ipsum dolor</h4>
+            <h4>lorem ipsum dolor</h4>
+            <h4>lorem ipsum dolor</h4>
+            <h4>lorem ipsum dolor</h4>
+        </div>
+        <a href="#">Comprar</a>
+    </div>
+
+
+    <div class="planos-base">
+        <h1>Basic</h1>
+        <div class="preco">
+            <h2>R$20</h2>
+        </div>
+        <div class="vantagens">
+            <h4>lorem ipsum dolor</h4>
+            <h4>lorem ipsum dolor</h4>
+            <h4>lorem ipsum dolor</h4>
+            <h4>lorem ipsum dolor</h4>
+        </div>
+        <a href="#">Comprar</a>
+    </div>
+
+
+</div>
+
+<!--fim dos Planos-->
 
 
 <!--END ABOUT-->
